Revise css - Ensures text is displayed correct for better visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,8 +19,8 @@ body{
     width: 100%;
     padding: 20px;
     height: 50px;
-    font-size: 24px;
-    text-align: right;
+    font-size: 4rem;
+    text-align: left;
     margin-bottom: 10px;
     border: none;
     background-color: hsl(0, 0%, 20%);
